Added view model logic for affiche

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,7 @@
     <string name="network_connection_error">Невозможно подключиться к серверу</string>
     <string name="network_internal_error">Внутрення ошибка. Пожалуйста, повторите позже</string>
 
+    <!-- Errors -->
+    <string name="error_default_load_error_body">Проверьте соединение с интернетом или зайдите позже</string>
+
 </resources>
