news paging is finished. MVP is ready

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,6 +28,7 @@
 
     <!-- News -->
     <string name="news_title">Новости</string>
+    <string name="news_element">Новость</string>
 
     <!-- News details -->
     <string name="news_details_title">{newsItemTitle}</string>
